Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114825

Blacklisting of tst_qquickpopup::hover doesn't work

    XMLWordPrintable

Details

    • 9240878b2 (dev), 6b6678bc8 (dev), f5479dda7 (6.6), 3eb7fafaf (tqtc/lts-6.2), aee7b8f39 (6.5)

    Description

      https://code.qt.io/cgit/qt/qtdeclarative.git/tree/tests/auto/quickcontrols/qquickpopup/BLACKLIST?id=13dc5b3c9d40d10cc63c3893b454ccd9cb50a9b8 contains this:

      # See qtbase/src/testlib/qtestblacklist.cpp for format
      
      # QTBUG-114718 (begin)
      [overlay]
      [invisibleToolTipOpen]
      [cursorShape]
      [hover]
      [doubleClickInMouseArea]
      [focusMultiplePopup]
      # QTBUG-114718 (end)
      
      [overlay]
      macos # QTBUG-89938
      
      [zOrder]
      macos # QTBUG-89938
      
      # QTBUG-94251
      [closePolicy]
      opensuse-leap
      
      [cursorShape]
      opensuse-leap
      

      Forcing it to fail results in FAILs, instead of BFAILs:

      diff --git a/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp b/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp
      index f67af996d5..3d06705498 100644
      --- a/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp
      +++ b/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp
      @@ -959,6 +959,8 @@ void tst_QQuickPopup::hover()
           QFETCH(QString, source);
           QFETCH(bool, modal);
       
      +    QFAIL("oops");
      +
           QQuickControlsApplicationHelper helper(this, source);
           QVERIFY2(helper.ready, helper.failureMessage());
           QQuickWindow *window = helper.window;
      
      17:55:46: Starting /Users/mitch/dev/qt-dev-debug-non-fw/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup hover...
      ********* Start testing of tst_QQuickPopup *********
      Config: Using QtTest library 6.7.0, Qt 6.7.0 (arm64-little_endian-lp64 shared (dynamic) debug build; by Apple LLVM 14.0.3 (clang-1403.0.22.14.1)), macos 13.3
      PASS   : tst_QQuickPopup::Fusion::initTestCase()
      FAIL!  : tst_QQuickPopup::Fusion::hover(h1) oops
         Loc: [/Users/mitch/dev/qt-dev/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(962)]
      FAIL!  : tst_QQuickPopup::Fusion::hover(h2) oops
         Loc: [/Users/mitch/dev/qt-dev/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(962)]
      FAIL!  : tst_QQuickPopup::Fusion::hover(h3) oops
         Loc: [/Users/mitch/dev/qt-dev/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(962)]
      FAIL!  : tst_QQuickPopup::Fusion::hover(h4) oops
         Loc: [/Users/mitch/dev/qt-dev/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(962)]
      PASS   : tst_QQuickPopup::Fusion::cleanupTestCase()
      Totals: 2 passed, 4 failed, 0 skipped, 0 blacklisted, 1ms
      ********* Finished testing of tst_QQuickPopup *********
      17:55:46: /Users/mitch/dev/qt-dev-debug-non-fw/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup exited with code 4
      

      As mentioned in this comment, I've tried various things to get it to work, but none of them helped:

      I thought maybe it was the colons in the data tags, but removing those doesn't help. I also saw a duplicate "overlay" blacklisting, but removing that didn't help, nor did giving each function specific platforms:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            macadder Jason McDonald
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes