Doc: state blacklist condition requirement explicitly

Each line with a test function must be followed by a line describing
the conditions for ignoring that test function.

From what I can see, this wasn't explicitly stated anywhere.

Fixes: QTBUG-114825
Change-Id: I1941d6c9a6d56a8374a0c5a99c538cf1eaebd544
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit 6b6678bc88e1b53f055b3a7cb8cd30da8ac0e248)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>